<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.LoveCalcFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/img_love"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLoveCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_love_calculator"
        android:textColor="@color/purple"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_first_name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvLoveCalculator"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/edt_style"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"/>

    <TextView
        android:id="@+id/tvSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_second_name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edtFirstName"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtSecondName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/edt_style"
        app:layout_constraintTop_toBottomOf="@id/tvSecondName"/>

    <Button
        android:id="@+id/bt_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/bt_calculate"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edtSecondName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_heart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_home1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_history"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_history1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>